20110422 (T.S.)
 - README, README.drvPadUdpComm: updated documentation.
 - src/padStream.c, src/padStream.h:
    o Added PadStreamStartStopCB() additional 'PadRequest' argument
      so that e.g., protocol version may be verified/checked.
    o Added 'nchannels' argument to 'getdata' callback so that channel
      numbers other than 4 can be supported.
    o PadStripSimValRec now contains an array of PADRPLY_STRM_NCHANNELS
      instead of four discrete values. This helps supporting different
      values for nchannels in the simulation 'getdata' callback.
    o padStreamSim_iir2_getdata() and streamTest() 'getdata' callbacks
      now support variable 'nchannels'.
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h: Added drvPadUdpCommPostReply()
   [convenience routine for LLRF].
20110422 (T.S.)
 - src/padProto.h, src/padProtoHost.c:
   added new 'more-fragments' flag to 'index' and a macro to extract
   the index number (masking the MF flag).
 - src/padStream.c:
   No longer reject non-zero index (preparation for idx support in 
   drvPadUdpComm).
20110421 (T.S.)
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h:
   Support up to PADRPLY_STRM_NUM_KINDS. This is the max. currently defined
   by the padProtocol (8).
   'cook' callback has a new return value with an optional 'redirected' kind
   encoded. I.e., the cook callback can choose to have the buffer posted
   as a different 'kind' from the original one.
   drvPadUdpCommListener() checks for padProto version (added paranoia).
 - src/wavBuf.c: check for legal 'kind' parameter in wavBufPost().
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h, src/padProto.h, src/padProto.c,
   src/hostStream.c: 
   Added new protocol feature: PADCMD_STRM_FLAG_C1 allows the user to request
   that only a single ADC channel is streamed. The Channel number may e.g., be
   encoded in the data 'kind'.
   This new feature in the protocol made it necessary to bump the protocol
   version number.
20110420 (T.S.)